2014-10-24  Dan Bernstein  <mitz@apple.com>

        build.webkit.org/dashboard immediately retries a request to buildbot when the response is 404
        https://bugs.webkit.org/show_bug.cgi?id=138046

        Reviewed by Alexey Proskuryakov.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BuildbotQueue.js:
        (BuildbotQueue.prototype._load): Only consider retrying immediately if the error code was
        401. Otherwise, we’ll retry normally in 45 seconds.

2014-10-24  Marcos Chavarría Teijeiro  <chavarria1991@gmail.com>

        [GTK] Implement is_selected method on WebKitHitTestResult
        https://bugs.webkit.org/show_bug.cgi?id=137110

        Reviewed by Tim Horton.

        Add tests for new context SELECTION on WebKitHitTestResult.

        * TestWebKitAPI/Tests/WebKit2Gtk/TestContextMenu.cpp:
        (testContextMenuDefaultMenu):
        * TestWebKitAPI/Tests/WebKit2Gtk/TestUIClient.cpp:
        (testWebViewMouseTarget):

2014-10-23  Roger Fong  <roger_fong@apple.com>

        [Win] Skip failing JSC tests following r175078
        https://bugs.webkit.org/show_bug.cgi?id=130967.

        * Scripts/run-javascriptcore-tests:

2014-10-22  Jake Nielsen  <jacob_nielsen@apple.com>

        commitqueuetask_unittest.py should be made more concise.
        https://bugs.webkit.org/show_bug.cgi?id=137985

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/tool/bot/commitqueuetask_unittest.py:
        Refactors tests to use MockSimpleTestPlanCommitQueue where possible.
        (MockCommitQueue.__init__):
        (MockCommitQueue.report_flaky_tests):
        (MockCommitQueue):
        (MockCommitQueue.get_reported_flaky_tests):
        (MockSimpleTestPlanCommitQueue.__init__):
        (MockSimpleTestPlanCommitQueue.run_command):
        (MockSimpleTestPlanCommitQueue.did_run_clean_tests):
        (CommitQueueTaskTest._run_and_expect_patch_analysis_result):
        (test_land_failure):