@@ -2945,6 +2945,14 @@
             "commit-queue@webkit.org"
          ]
       },
+      "Conrad Shultz" : {
+         "emails" : [
+            "conrad_shultz@apple.com"
+         ],
+         "nicks" : [
+            "shultzc"
+         ]
+      },
       "Daniel Sievers" : {
          "emails" : [
             "sievers@chromium.org"
